[package]
name = "http-proxy-ipv6-pool"
version = "0.1.1"
edition = "2021"
authors = ["zu1k <i@lgf.im>", "Beining <i@dz.ax>"]
description = "Http proxy, every request from a separate IPv6 address."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/cnbeining/http-proxy-ipv6-pool"
repository = "https://github.com/cnbeining/http-proxy-ipv6-pool"


[dependencies]
cidr = "0.2"
getopts = "0.2"
hyper = { version = "0.14.31", features = ["client", "server", "http1", "runtime"] }
tokio = { version = "1.42", features = ["net", "rt-multi-thread", "macros", "io-util"] }
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
md-5 = "0.10"
chrono = "0.4"
parking_lot = "0.12"
url = "2"
regex = "1"
lazy_static = "1.4"
hex = "0.4"
urlencoding = "2"
prometheus = "0.13"


[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1